--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -5,7 +5,7 @@ author: Alexey Nurgaliev, Gubarev Valentin
 section: experimental
 ---
 
-<script src="/js/experimental/webjs.js"></script>
+<script src="/js/experimental/webgl.js"></script>
 
 <div class="text-center">
 <div id="output" style="width: 400px; height: 400px;"></div>
