--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -5,6 +5,7 @@ author: Alexey Nurgaliev, Gubarev Valentin
 section: experimental
 ---
 
+<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
 <script src="/js/experimental/webgl.js"></script>
 
 <div class="text-center">
