--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -9,5 +9,5 @@ section: experimental
 <script src="/js/experimental/webgl.js"></script>
 
 <div class="text-center">
-<div id="output" style="width: 400px; height: 400px;"></div>
+<div id="output" style="width: 400px; height: 400px; margin: 0 auto;"></div>
 </div>
