--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -10,4 +10,6 @@ section: experimental
 
 <div class="text-center">
 <div id="output" style="width: 400px; height: 400px; margin: 0 auto;"></div>
+<br>
+<div id="fps" class="text-center"></div> 
 </div>
