--- a/pskov/tasks/index.html
+++ b/pskov/tasks/index.html
@@ -8,7 +8,7 @@ title: Задачи
 </div>
 
 {% for post in site.posts %}
-	{% if post.section == 'pskov-tasks' %}
+	{% if post.section == 'pskov' %}
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			{{ post.date | date_to_string }} » <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
