--- a/pskov/documentation/index.html
+++ b/pskov/documentation/index.html
@@ -8,7 +8,7 @@ title: Документация
 </div>
 
 {% for post in site.posts %}
-	{% if post.section == 'pskov-docs' %}
+	{% if post.section == 'pskov-documentation' %}
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			{{ post.date | date_to_string }}
