--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ layout: base
 title: Code More
 ---
 
-<div class="page-header text-center">
-    <h1>Code More!</h1>
-
-    <a href="/catalog">каталог ссылок</a>&nbsp;|
-    <a href="/catalog/online-judge">online judge</a>
-</div>
-
 <div class="container">
-    <div class="content-container">
+    <div class="content-container index-container">
+
+        <div class="page-header text-center">
+            <h1>Code More!</h1>
+
+            <a href="/catalog">каталог ссылок</a>&nbsp;|
+            <a href="/catalog/online-judge">online judge</a>
+        </div>
 
         <ul class="nav nav-pills nav-justified index-sections">
             {% include sections.html %}
