--- a/programming/index.html
+++ b/programming/index.html
@@ -3,17 +3,18 @@ layout: page-base
 title: Изучение языков программирования
 ---
 
-<div class="page-header text-center">
-<h2>{{ page.title }}</h2>
-</div>
+<link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/programming.css">
+
+<div class="sub-header">{{ page.title }}</div>
 
 {% for post in site.posts %}
 	{% if post.section == 'programming' %}
-		<p>
+		<p class="article-item">
 		<span class="label label-primary">{{ post.language }}</span> 
-		<strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
+		<a href="{{ post.url }}">{{ post.title }}</a>
 		{% if post.author %}
-		 - <span class="text-info">{{ post.author }}</span>
+            <span class="text-info"> / {{ post.author }}</span>
 		{% endif %}
 		</p>
 	{% endif %}
