Внутренние разделы ПсковГУ

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -3,6 +3,9 @@ layout: page-base
 title: Достижения
 ---
 
+<link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/pskov.css">
+
 <link rel="stylesheet" href="/css/lightbox.css">
 <link rel="stylesheet" href="/css/gallery.css">
 <script src="/js/lightbox.min.js"></script>
@@ -108,9 +111,7 @@ title: Достижения
     });
 </script>
 
-<div class="page-header text-center">
-<h2>{{ page.title }}</h2>
-</div>
+<div class="sub-header">{{ page.title }}</div>
 
 <h3>Сертификаты ACM ICPC</h3>
 <div id="acm"></div>
