--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -3,6 +3,9 @@ layout: page-base
 title: Фотографии
 ---
 
+<link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/pskov.css">
+
 <link rel="stylesheet" href="/css/lightbox.css">
 <link rel="stylesheet" href="/css/gallery.css">
 <script src="/js/lightbox.min.js"></script>
@@ -30,8 +33,6 @@ title: Фотографии
     });
 </script>
 
-<div class="page-header text-center">
-  <h2>{{ page.title }}</h2>
-</div>
+<div class="sub-header">{{ page.title }}</div>
 
 <div id="gallery"></div>
