Дипломы IT-планета 2014

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -60,6 +60,9 @@ title: Достижения
         {file: "DiplomaItPlaneta_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2014_01_31.jpg", title: ""},
+        {file: "it-planet-2014-1.jpg", title: ""},
+        {file: "it-planet-2014-2.jpg", title: ""},
+        {file: "it-planet-2014-3.jpg", title: ""},
     ];
 	var abbyy = [
 		{file: "DiplomaAbbyCup_2014.jpg", title: ""}
