--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -7,8 +7,11 @@ section: experimental
 	
 <script>
 	function OXY(cnt){
-		cnt.fillRect(10,10,20,20);
-		cnt.fillRect(50,50,20,20);
+		cnt.beginPath();
+		cnt.moveTo(0,150);
+		cnt.lineTo(100,0);
+		cnt.endPath();
+		cnt.strike();
 	}
     function Draw(name){
 		cnv = document.getElementById(name);
