--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -8,6 +8,7 @@ section: experimental
 <script>
 	function OXY(cnt){
 		cnt.beginPath();
+		cnt.strokeStyle = 'Black';
 		cnt.moveTo(0,150);
 		cnt.lineTo(100,0);
 		cnt.endPath();
