--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -6,25 +6,35 @@ section: experimental
 ---
 	
 <script>
-	function OXY(cnt){
-		//cnt.fillRect(250,50,10,10);
+	function OX(cnt){
 		cnt.beginPath();
 		cnt.moveTo(0,150);
-		cnt.lineTo(400,150);
+		cnt.lineTo(800,150);
+		/* Стрелка */
+		cnt.lineTo(790,145);
+		cnt.moveTo(800,150);
+		cnt.lineTo(810,155);
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
-		//cnt.fillRect(50,50,10,10);
+	}
+	function OY(cnt){
+		cnt.beginPath();
+		cnt.moveTo(10,300);
+		cnt.lineTo(10,0);
+		/* Стрелка */
+		cnt.lineTo(5,10);
+		cnt.moveTo(10,0);
+		cnt.lineTo(15,10);
+		cnt.strokeStyle = 'Black';
+		cnt.stroke();
 	}
     function Draw(name){
 		cnv = document.getElementById(name);
 		cnv.width = '800';
 		cnv.height = '300';
 		cnt = cnv.getContext('2d');
-		//cnt.fillRect(10,10,30,15);
-		//cnt.lineTo(50,50);
-		//cnt.strokeStyle = 'Black';
-		//cnt.stroke();
-		OXY(cnt);
+		OX(cnt);
+		OY(cnt);
 	}
 </script>
 
