--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -13,7 +13,7 @@ section: experimental
 		/* Стрелка */
 		cnt.lineTo(790,145);
 		cnt.moveTo(800,150);
-		cnt.lineTo(810,155);
+		cnt.lineTo(790,155);
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
@@ -28,6 +28,14 @@ section: experimental
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
+	function Sin(cnt){
+		cnt.moveTo(10,150);
+		for(var x = 0; x < 700; ++x){
+			cnt.lineTo(10+x,150+Math.sin(x/180.0*Math.PI));
+		}
+		cnt.strokeStyle = 'Black';
+		cnt.stroke();
+	}
     function Draw(name){
 		cnv = document.getElementById(name);
 		cnv.width = '800';
@@ -35,6 +43,7 @@ section: experimental
 		cnt = cnv.getContext('2d');
 		OX(cnt);
 		OY(cnt);
+		Sin(cnt);
 	}
 </script>
 
