--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -31,7 +31,7 @@ section: experimental
 	function Sin(cnt){
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			cnt.lineTo(10+x,150+100*Math.sin(x/180.0*Math.PI));
+			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0));
 		}
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
@@ -53,5 +53,6 @@ section: experimental
 
 <p>Функция амплитуды от частоты</p>
 <canvas id='fun_w'>Канвас не поддерживается</canvas>
+<script>Draw('fun_w');</script>
 
 <script>Draw();</script>
