--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -14,7 +14,7 @@ section: experimental
 		cnt.lineTo(790,145);
 		cnt.moveTo(800,150);
 		cnt.lineTo(790,155);
-		cnt.endPath();
+		//cnt.endPath();
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
@@ -26,7 +26,7 @@ section: experimental
 		cnt.lineTo(5,10);
 		cnt.moveTo(10,0);
 		cnt.lineTo(15,10);
-		cnt.endPath();
+		//cnt.endPath();
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
@@ -36,7 +36,7 @@ section: experimental
 		for(var x = 0; x < 700; ++x){
 			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0));
 		}
-		cnt.endPath();
+		//cnt.endPath();
 		cnt.strokeStyle = color;
 		cnt.stroke();
 	}
