--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -30,11 +30,11 @@ section: experimental
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
-	function Sin(cnt, frequency, color){
+	function Sin(cnt, color){
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0/frequency));
+			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0));
 		}
 		cnt.endPath();
 		cnt.strokeStyle = color;
@@ -47,7 +47,7 @@ section: experimental
 		cnt = cnv.getContext('2d');
 		OX(cnt);
 		OY(cnt);
-		Sin(cnt, 2, color);
+		Sin(cnt, color);
 	}
 </script>
 
