--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -28,11 +28,11 @@ section: experimental
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
-	function Sin(cnt, color){
+	function Sin(cnt, frequency, color){
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0/2));
+			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0 * frequency));
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
@@ -44,7 +44,7 @@ section: experimental
 		cnt = cnv.getContext('2d');
 		OX(cnt);
 		OY(cnt);
-		Sin(cnt, color);
+		Sin(cnt, 2, color);
 	}
 </script>
 
