--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -48,8 +48,8 @@ section: experimental
 	}
 	function DrawDraw(){
 		frequency = getElementById('frequency').value;
-		Draw('fun_time', frequency, 'red');
-		Draw('fun_w', frequency, 'blue');
+		Draw('fun_time', 2, 'red');
+		Draw('fun_w', 3, 'blue');
 	}
 </script>
 <p>Частота синусоидального сигнала</p>
