--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -47,7 +47,9 @@ section: experimental
 		Sin(cnt, frequency, color);
 	}
 	function DrawDraw(){
+		alert("drawdraw");
 		frequency = getElementById('frequency').value;
+		alert(frequency);
 		Draw('fun_time', 2, 'red');
 		Draw('fun_w', 3, 'blue');
 	}
