--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -48,7 +48,7 @@ section: experimental
 	}
 	function DrawDraw(){
 		alert("drawdraw");
-		frequency = getElementById('frequency').value;
+		var frequency = getElementById('frequency').value;
 		alert(frequency);
 		Draw('fun_time', 'red');
 		Draw('fun_w', 'blue');
