--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -48,8 +48,8 @@ section: experimental
 	}
 	function DrawDraw(){
 		alert("drawdraw");
-		var frequency = getElementById('frequency').value;
-		alert(frequency);
+		//var frequency = getElementById('frequency').value;
+		//alert(frequency);
 		Draw('fun_time', 'red');
 		Draw('fun_w', 'blue');
 	}
