--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -37,7 +37,7 @@ section: experimental
 		cnt.strokeStyle = color;
 		cnt.stroke();
 	}
-    function Draw(name, frequency color){
+    function Draw(name, frequency, color){
 		alert('DrawDraw()');
 		cnv = document.getElementById(name);
 		cnv.width = '800';
