--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -61,10 +61,12 @@ section: experimental
 </script>
 
 <p>Частота №1 синусоидального сигнала</p>
-<input type='text' size='4' maxlength='4' id='frequency_1' onchange='DrawDraw(this.value)'></input>
+<input type='text' size='4' maxlength='4' id='frequency_1' onChange='DrawDraw(this.value)'></input>
 
 <p>Частота №2 синусоидального сигнала</p>
-<input type='text' size='4' maxlength='4' id='frequency_2' onchange='DrawDraw()'></input>
+<input type='text' size='4' maxlength='4' id='frequency_2' onChange='DrawDraw()'></input>
+
+<input type='button' value="ОК" onClick="dataField(2)"></input>
 
 <p>Функция амплитуды от времени</p>
 <canvas id='fun_time'>Канвас не поддерживается</canvas>
