--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -56,8 +56,8 @@ section: experimental
 		Draw('fun_time', 'red', frequency_1, frequency_2);
 		//Draw('fun_w', frequency, 'blue');
 	}
-	function fft(arr){
-	}
+	//function fft(arr){
+	//}
 </script>
 
 <p>Частота №1 синусоидального сигнала</p>
