--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -50,10 +50,10 @@ section: experimental
 	}
 	function DrawDraw(frequency){
 		alert(frequency);
-		var frequency_1 = document.getElementById('frequency_1').value;
-		var frequency_2 = document.getElementById('frequency_2').value;
-		alert(frequency_1,frequency_2);
-		Draw('fun_time', 'red', frequency_1, frequency_2);
+		//var frequency_1 = document.getElementById('frequency_1').value;
+		//var frequency_2 = document.getElementById('frequency_2').value;
+		//alert(frequency_1,frequency_2);
+		Draw('fun_time', 'red', 2, 3);
 		//Draw('fun_w', frequency, 'blue');
 	}
 	//function fft(arr){
@@ -61,7 +61,10 @@ section: experimental
 </script>
 
 <p>Частота №1 синусоидального сигнала</p>
-<input type='text' size='4' maxlength='4' id='frequency_1' onChange='DrawDraw(this.value)'></input>
+<input
+	type='text' size='4' maxlength='4' id='frequency_1'
+	onChange='DrawDraw(this.value)'>
+</input>
 
 <p>Частота №2 синусоидального сигнала</p>
 <input type='text' size='4' maxlength='4' id='frequency_2' onChange='DrawDraw()'></input>
