--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -69,7 +69,7 @@ section: experimental
 <p>Частота №2 синусоидального сигнала</p>
 <input type='text' size='4' maxlength='4' id='frequency_2' onChange='DrawDraw()'></input>
 
-<input type='button' value="ОК" onClick="dataField(2)"></input>
+<input type='button' value="ОК" onClick='DrawDraw(2)'></input>
 
 <p>Функция амплитуды от времени</p>
 <canvas id='fun_time'>Канвас не поддерживается</canvas>
