--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -32,9 +32,9 @@ section: experimental
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			var y1 = Math.sin(x*Math.PI/180.0 * frequency_1);
-			var y2 = Math.sin(x*Math.PI/180.0 * frequency_2);
-			cnt.lineTo(10 + x, 150 + 100 * (y1+y2);
+			//var y1 = Math.sin(x*Math.PI/180.0 * frequency_1);
+			//var y2 = Math.sin(x*Math.PI/180.0 * frequency_2);
+			//cnt.lineTo(10 + x, 150 + 100 * (y1+y2);
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
