--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -28,48 +28,34 @@ section: experimental
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
-	function Sin(cnt, color, frequency_1, frequency_2){
+	function Sin(cnt, frequency, color){
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			//var y1 = Math.sin(x*Math.PI/180.0 * frequency_1);
-			//var y2 = Math.sin(x*Math.PI/180.0 * frequency_2);
-			//cnt.lineTo(10 + x, 150 + 100 * (y1+y2);
+			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0 * frequency));
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
 	}
-    function Draw(name, color, frequency_1, frequency_2){
+    function Draw(name, frequency, color){
 		cnv = document.getElementById(name);
 		cnv.width = '800';
 		cnv.height = '300';
 		cnt = cnv.getContext('2d');
 		OX(cnt);
 		OY(cnt);
-		Sin(cnt, color, frequency_1, frequency_2);
+		Sin(cnt, frequency, color);
 	}
 	function DrawDraw(frequency){
-		alert(frequency);
-		//var frequency_1 = document.getElementById('frequency_1').value;
-		//var frequency_2 = document.getElementById('frequency_2').value;
-		//alert(frequency_1,frequency_2);
-		Draw('fun_time', 'red', 2, 3);
-		//Draw('fun_w', frequency, 'blue');
+		Draw('fun_time', frequency, 'red');
+		Draw('fun_w', frequency, 'blue');
 	}
-	//function fft(arr){
-	//}
+	function fft(arr){
+	}
 </script>
 
-<p>Частота №1 синусоидального сигнала</p>
-<input
-	type='text' size='4' maxlength='4' id='frequency_1'
-	onChange='DrawDraw(this.value)'>
-</input>
-
-<p>Частота №2 синусоидального сигнала</p>
-<input type='text' size='4' maxlength='4' id='frequency_2' onChange='DrawDraw()'></input>
-
-<input type='button' value="ОК" onClick='DrawDraw(2)'></input>
+<p>Частота синусоидального сигнала</p>
+<input size='4' maxlength='4' id='frequency' onchange='DrawDraw(this.value)'></input>
 
 <p>Функция амплитуды от времени</p>
 <canvas id='fun_time'>Канвас не поддерживается</canvas>
