--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -32,7 +32,8 @@ section: experimental
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			cnt.lineTo(10+x,150+100*Math.sin(x*Math.PI/180.0 * frequency));
+			var y1 = Math.sin(x*Math.PI/180.0 * frequency);
+			cnt.lineTo(10+x,150+100*y1);
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
