--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -33,7 +33,8 @@ section: experimental
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
 			var y1 = Math.sin(x*Math.PI/180.0 * frequency);
-			cnt.lineTo(10+x,150+100*y1);
+			var y2 = Math.sin(x*Math.PI/180.0 * 5);
+			cnt.lineTo(10+x,150+50*(y1+y2));
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
