--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -8,18 +8,18 @@ section: experimental
 <script>
 	function OX(cnt){
 		cnt.beginPath();
-		cnt.moveTo(0,150);
-		cnt.lineTo(800,150);
+		cnt.moveTo(0,100);
+		cnt.lineTo(800,100);
 		/* Стрелка */
-		cnt.lineTo(790,145);
-		cnt.moveTo(800,150);
-		cnt.lineTo(790,155);
+		cnt.lineTo(790, 95);
+		cnt.moveTo(800,100);
+		cnt.lineTo(790,105);
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
 	function OY(cnt){
 		cnt.beginPath();
-		cnt.moveTo(10,300);
+		cnt.moveTo(10,200);
 		cnt.lineTo(10,0);
 		/* Стрелка */
 		cnt.lineTo(5,10);
@@ -32,9 +32,9 @@ section: experimental
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			var y1 = Math.sin(x*Math.PI/180.0 * frequency);
-			var y2 = Math.sin(x*Math.PI/180.0 * 5);
-			cnt.lineTo(10+x,150+50*(y1+y2));
+			var y1 = Math.sin(x * Math.PI / 180.0 * frequency);
+			var y2 = Math.sin(x * Math.PI / 180.0 * 5);
+			cnt.lineTo(10 + x, 100 + 50 * (y1 + y2));
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
@@ -42,7 +42,7 @@ section: experimental
     function Draw(name, frequency, color){
 		cnv = document.getElementById(name);
 		cnv.width = '800';
-		cnv.height = '300';
+		cnv.height = '200';
 		cnt = cnv.getContext('2d');
 		OX(cnt);
 		OY(cnt);
