--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -39,10 +39,9 @@ section: experimental
 		cnt.strokeStyle = color;
 		cnt.stroke();
 	}
-	/* arr - массив данных,
-	   cnt_step - сколько шагов выводить,
-	   step - количество пикселей на один шаг
-	*/
+	// arr - массив данных,
+	// cnt_step - сколько шагов выводить,
+	// step - количество пикселей на один шаг
 	function DrawFunction(arr, cnt_step, step){
 		cnt.beginPath();
 		cnt.moveTo(10,150);
