--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -10,7 +10,6 @@ section: experimental
 		cnt.beginPath();
 		cnt.moveTo(0,100);
 		cnt.lineTo(800,100);
-		/* Стрелка */
 		cnt.lineTo(790, 95);
 		cnt.moveTo(800,100);
 		cnt.lineTo(790,105);
@@ -21,49 +20,48 @@ section: experimental
 		cnt.beginPath();
 		cnt.moveTo(10,200);
 		cnt.lineTo(10,0);
-		/* Стрелка */
 		cnt.lineTo(5,10);
 		cnt.moveTo(10,0);
 		cnt.lineTo(15,10);
 		cnt.strokeStyle = 'Black';
 		cnt.stroke();
 	}
-	function Sin(cnt, frequency, color){
+	
+	function Sin(cnt, color){
+		var frequency_1 = document.getElementById('frequency_1').value;
+		var frequency_2 = document.getElementById('frequency_2').value;
 		cnt.beginPath();
 		cnt.moveTo(10,150);
 		for(var x = 0; x < 700; ++x){
-			var y1 = Math.sin(x * Math.PI / 180.0 * frequency);
-			var y2 = Math.sin(x * Math.PI / 180.0 * 5);
+			var y1 = Math.sin(x * Math.PI / 180.0 * frequency_1);
+			var y2 = Math.sin(x * Math.PI / 180.0 * frequency_2);
 			cnt.lineTo(10 + x, 100 + 50 * (y1 + y2));
 		}
 		cnt.strokeStyle = color;
 		cnt.stroke();
 	}
+
 	// arr - массив данных,
 	// cnt_step - сколько шагов выводить,
 	// step - количество пикселей на один шаг
-	function DrawFunction(arr, cnt_step, step){
-		cnt.beginPath();
-		cnt.moveTo(10,150);
+	function DrawFunction(cnt_step, step){
+		var arr;
 		for(var i = 0; i < cnt_step; ++i){
-			cnt.lineTo(10 + i*step, 100 + 50 * arr[i]);
+			arr[i] = 2;
 		}
-		cnt.strokeStyle = color;
-		cnt.stroke();
-		}
+		return arr;
 	}
     function Draw(name, frequency, color){
-	alert('Draw');
 		cnv = document.getElementById(name);
 		cnv.width = '800';
 		cnv.height = '200';
 		cnt = cnv.getContext('2d');
 		OX(cnt);
 		OY(cnt);
-		Sin(cnt, frequency, color);
+		Sin(cnt, color);
 	}
+	
 	function DrawDraw(frequency){
-	alert('DrawDraw');
 		Draw('fun_time', frequency, 'red');
 		Draw('fun_w', frequency, 'blue');
 	}
@@ -74,9 +72,10 @@ section: experimental
 <p>Пробы по программированию</p>
 
 <p>Частота синусоидального сигнала</p>
-<input type='text' size='4' maxlength='4' id='frequency' onChange='DrawDraw(this.value)'></input>
+<input type='text' size='4' maxlength='4' id='frequency_1' onChange='DrawDraw(this.value)'></input>
 
-<input type='button' value='Ok' id='buttonOk' onClick='DrawDraw(3.14)'></input>
+<p>Частота синусоидального сигнала</p>
+<input type='text' size='4' maxlength='4' id='frequency_2' onChange='DrawDraw(this.value)'></input>
 
 <p>Функция амплитуды от времени</p>
 <canvas id='fun_time'>Канвас не поддерживается</canvas>
