Попытка добавить стили

--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -4,7 +4,9 @@ title: Преобразование Фурье
 author: Valentin Gubarev
 section: experimental
 ---
-	
+
+<link rel='stylesheet' type='text/css' href='styles.css' />
+
 <script>
 
 	var contextClass = (window.AudioContext ||
