--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -5,7 +5,7 @@ author: Valentin Gubarev
 section: experimental
 ---
 
-<link rel='stylesheet' type='text/css' href='styles.css' />
+<link rel="stylesheet" href="/css/styles_experimental.css">
 
 <script>
 
