--- a/_posts/experimental/2015-06-21-economic.html
+++ b/_posts/experimental/2015-06-21-economic.html
@@ -1,22 +1,16 @@
-﻿<!doctype html>
-<html>
+﻿---
+layout: post
+title: Решение экономических задач
+author: Valentin Gubarev
+section: experimental
+---
 
-<head>
-	<title>Решение экономических задач</title>
-	<meta charset='utf-8'></meta>
-	<style>
-		td{
-			text-align: center;
-		}
-	</style>
-	<script>
-		
-	</script>
-</head>
+<style>
+	td{
+		text-align: center;
+	}
+</style>
 
-
-
-<body>
 
 
 	<h3> Задание 1 </h3>
@@ -239,5 +233,3 @@
 		</tr>
 	</table>
 	
-</body>
-</html>
