--- a/_posts/experimental/2015-06-21-economic.html
+++ b/_posts/experimental/2015-06-21-economic.html
@@ -1,16 +1,22 @@
-﻿---
-layout: post
-title: Решение экономических задач
-author: Valentin Gubarev
-section: experimental
----
+﻿<!doctype html>
+<html>
 
-<style>
-	td{
-		text-align: center;
-	}
-</style>
+<head>
+	<title>Решение экономических задач</title>
+	<meta charset='utf-8'></meta>
+	<style>
+		td{
+			text-align: center;
+		}
+	</style>
+	<script>
+		
+	</script>
+</head>
 
+
+
+<body>
 
 
 	<h3> Задание 1 </h3>
@@ -233,3 +239,5 @@ section: experimental
 		</tr>
 	</table>
 	
+</body>
+</html>
